# Ray_tracing

./: Bitmap.cpp  CMakeLists.txt  Colors.hpp  Constants.hpp  Figure.hpp  Global_variables.hpp  Hash_map.hpp  Light_ray.hpp  Makefile  Material.hpp  My_texture.hpp  Picture.hpp  Plane.hpp  Point.hpp  Pyramid_intersection.hpp  README.md  Read_params.hpp  Render.hpp  Sphere.hpp  Start_objects.hpp  Triangle_intersection.hpp  cmake_install.cmake  main.cpp  rt.cbp
